Files reconstruct & added some prompts

--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "utils",
+  "name": "static-site",
   "version": "1.0.0",
   "description": "",
-  "main": "generateMarkdown.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
